test/parser/struct_keyword_end_of_block.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn error() -> void {

struct S {
// CHECK: [[# @LINE -1 ]]:1: error: expected '}' at the end of a block
    x: int,
}

fn error2() -> void {
    let y: int = 

struct S2 {
// CHECK: [[# @LINE -1 ]]:1: error: expected expression
// CHECK: [[# @LINE -2 ]]:1: error: expected '}' at the end of a block
    x: int,
}

// CHECK: StructDecl: S
// CHECK-NEXT:   FieldDecl: x:int
// CHECK-NEXT: StructDecl: S2
// CHECK-NEXT:   FieldDecl: x:int
// CHECK-NOT: {{.*}}
